# web_api

./: Cargo.toml
src/: app.rs  main.rs
src/app/: database.rs  handlers.rs  macros.rs  middleware.rs  models.rs
src/app/handlers/: post_feed_handler.rs  post_handler.rs  post_post_handler.rs
src/app/models/: post.rs
