[package]
name = "web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
env_logger = "0.9.0"
iron = "0.6.1"
logger = "0.4.0"
router = "0.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
